--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
     
-    <link rel="stylesheet" href="css_solution.css">
+    <link rel="stylesheet" href="css\css_solution.css">
 </head>
 <body>
     
