--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -100,11 +100,11 @@
 
 		</div>
 
-        	<script src="JS/bootstrap.min.js"></script>
+        	<script src="JS/bootstrap1.min.js"></script>
 
-		<script src="JS/bootstrap.js"></script>
+		<script src="JS/bootstrap1.js"></script>
 
-		<script src="JS/jquery-3.2.1.js"></script>
+		<script src="JS/jjquery-3.2.1.js"></script>
 	</body>
 
 </html>
