--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -6,11 +6,9 @@
 
 		<meta charset="UTF-8">
 
-		<title>Week3Solution</title>
-
 		<link rel="stylesheet" href="css/bootstrap.css"/>
 
-		<link rel="stylesheet" href="css/style.css"/>
+		<link rel="stylesheet" href="css/styles.css"/>
 
 	</head>
 	<body>
@@ -100,11 +98,14 @@
 
 		</div>
 
-        	<script src="JS/bootstrap1.min.js"></script>
+        	<script src="JS/bootstrap.min.js"></script>
 
-		<script src="JS/bootstrap1.js"></script>
+		  <script src="JS/bootstrap.js"></script>
 
-		<script src="JS/jjquery-3.2.1.js"></script>
+		  <script src="JS/jquery-3.2.1.js"></script>
+        
+        <script src="JS/jquery-1.11.3.min.js"></script>
+
 	</body>
 
 </html>
