--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,111 +1,65 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Food</title>
 
-<html>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css" media="screen">   
+  </head>
 
-	<head>
+  <body>
 
-		<meta charset="UTF-8">
+    <header>
+     <nav class="navbar navbar-default" id="top">
+      <div class="container-fluid">
+        <!-- Brand and toggle are in same line -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed visible-xs-block" data-toggle="collapse" data-target="#nav-list" aria-expanded="false">
+            <span class="sr-only">Menu</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Food, LLC</a>
+        </div>
 
-		<link rel="stylesheet" href="css/bootstrap.css"/>
+        <div class="collapse navbar-collapse" id="nav-list">
+          <ul class="nav navbar-nav navbar-right visible-xs-block">
+            <li id="dropdown_odd"><a href="#chicken">Chicken</a></li>
+            <li><a href="#beef">Beef</a></li>
+            <li id="dropdown_odd"><a href="#sushi">Sushi</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-		<link rel="stylesheet" href="css/styles.css"/>
+    <h1>Our Menu</h1>
 
-	</head>
-	<body>
+    </header>    
 
-		<nav id="navbar" class="navbar navbar-light bg-light">
 
-			<a class="navbar-brand" href="#">Navbar</a>
+    <section id="chicken">
+      <h2>Chicken</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <a href="#top">Back to Top</a>
+    </section>
+    <section id="beef">
+      <h2>Beef</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <a href="#top">Back to Top</a>
+    </section>
+    <section id="sushi">
+      <h2>Sushi</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <a href="#top">Back to Top</a>
+    </section>
 
-			<ul class="nav nav-pills">
+    <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-				<li class="nav-item">
-
-					<a class="nav-link" href="#Div1">Div1</a>
-
-				</li>
-				<li class="nav-item">
-
-					<a class="nav-link" href="#Div2">Div2</a>
-
-				</li>
-
-				<li class="nav-item">
-
-					<a class="nav-link" href="#Div3">Div3</a>
-				</li>
-			</ul>
-
-		</nav>
-
-		<div data-spy="scroll" data-target="#navbar" data-offset="0">
-
-			<h1>Our Menu</h1>
-
-			<div id="Div1" class="bodyDiv">
-
-				<h3>Div1</h3>
-
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-			</div>
-
-			<div id="Div2" class="bodyDiv">
-
-				<h3>Div2</h3>
-
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-			</div>
-
-			<div id="Div3" class="bodyDiv">
-
-				<h3>Div3</h3>
-
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-			</div>	
-
-		</div>
-
-        	<script src="JS/bootstrap.min.js"></script>
-
-		  <script src="JS/bootstrap.js"></script>
-
-		  <script src="JS/jquery-3.2.1.js"></script>
-        
-        <script src="JS/jquery-1.11.3.min.js"></script>
-
-	</body>
-
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  </body>
 </html>
